# graphql-api-template

./: Cargo.toml
src/: main.rs
src/api/: mod.rs  mutation.rs  query.rs
