[package]
name = "graphql-api-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-graphql = { version = "3.0.35", features = ["dataloader"] }
tokio = "1.17.0"
async-trait = "0.1.52"
futures = "0.3.21"
async-graphql-actix-web = "3.0.35"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-native-tls" , "postgres", "macros" ] }
dotenv = "0.15.0"
